<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="@dimen/padding_standard">


    <TextView
        android:id="@+id/nutrient_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_standard"
        android:text="@string/nutrient_name"
        android:textStyle="bold" />

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/drawable_padding"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/nutrient_amount"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_standard"
        android:text="@string/nutrient_amount"
        android:textStyle="bold" />

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/drawable_padding"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/nutrient_percentOfDailyNeeds"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_standard"
        android:text="@string/nutrient_percent"
        android:textStyle="bold" />

</LinearLayout>