<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_half"
    app:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/fav_recipe_image_card"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">


        <ImageView
            android:id="@+id/fav_recipe_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_recipe_image"
            android:transitionName="favRecipeImage"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/food_image" />


    </androidx.cardview.widget.CardView>

    <TextView

        android:id="@+id/fav_recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="favRecipeName"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_toEndOf="@+id/fav_recipe_image_card"
        android:padding="@dimen/padding_standard"
        android:text="@string/recipe_title"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/fav_recipe_servings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:gravity="center"
        android:layout_marginStart="@dimen/margin_standard"
        android:drawableStart="@drawable/ic_food_servings"
        android:drawablePadding="@dimen/drawable_padding"
        android:transitionName="favRecipeServings"
        android:padding="@dimen/padding_standard"
        android:layout_below="@id/fav_recipe_title"
        android:layout_toEndOf="@+id/fav_recipe_image_card"
        android:text="@string/recipe_servings"
        android:textSize="12sp"
        />
    <TextView
        android:id="@+id/fav_recipe_cooking_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin_standard"
        android:drawableStart="@drawable/ic_black_time"
        android:drawablePadding="@dimen/drawable_padding"
        android:transitionName="favRecipeServings"
        android:layout_below="@id/fav_recipe_servings"
        android:layout_toEndOf="@+id/fav_recipe_image_card"
        android:text="@string/recipe_cooking_time"
        android:textSize="12sp"
        android:padding="@dimen/padding_standard"
        />

</RelativeLayout>
</androidx.cardview.widget.CardView>