<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_standard"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">


        <ImageView
            android:id="@+id/recipe_image_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recipe_layout_height"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_recipe_image"
            android:transitionName="recipeImage"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/food_image" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:transitionName="recipeName"
        android:ellipsize="end"
        android:textStyle="bold"
        android:padding="@dimen/padding_standard"
        android:singleLine="true"
        android:text="@string/recipe_title"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/recipe_servings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_standard"
        android:drawableStart="@drawable/food"
        android:drawablePadding="@dimen/drawable_padding"
        android:transitionName="recipeServings"
        android:ellipsize="end"
        android:paddingStart="@dimen/padding_standard"
        android:singleLine="true"
        android:text="@string/recipe_servings"
        android:textSize="15sp"
        />

</LinearLayout>
