<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
    >
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_standard"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.recipeDetail.RecipeDetailFragment">

    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:transitionName="recipeName"
        android:textStyle="bold"
        android:padding="@dimen/padding_standard"
        android:text="@string/recipe_title"
        android:textSize="@dimen/recipe_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/servings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:transitionName="recipeName"
        android:padding="@dimen/padding_standard"
        android:text="@string/recipe_servings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_title"
        />

    <RelativeLayout
        android:layout_margin = "@dimen/margin_half"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servings">

        <ImageView
            android:id="@+id/recipe_image_card"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_recipe_image"
            android:transitionName="recipeImage"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/food_image" />

        <LinearLayout
            android:id="@+id/time_container"
            android:layout_width="80dp"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_standard"
            android:layout_margin="@dimen/padding_standard"
            android:layout_toEndOf="@+id/recipe_image_card"
            android:background="@drawable/recipe_details">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/icon_background"
                android:src="@drawable/ic_readiness_time"/>
            <TextView
                android:id="@+id/ready_in_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="14"
                android:textSize="@dimen/recipe_detail_text_size"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mins"
                android:textSize="@dimen/recipe_detail_text_size"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/health_score_container"
            android:layout_width="80dp"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/time_container"
            android:paddingTop="@dimen/padding_standard"
            android:layout_margin="@dimen/padding_standard"
            android:background="@drawable/recipe_details">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/icon_background"
                android:src="@drawable/ic_readiness_time"/>
            <TextView
                android:id="@+id/health_score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="14"
                android:textSize="@dimen/recipe_detail_text_size"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/health_score"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_score"
                android:textSize="@dimen/recipe_detail_text_size"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/nutrition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nutrition"
            android:layout_below="@+id/time_container"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginEnd="@dimen/padding_standard"

            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_half"
        android:padding="@dimen/padding_standard"
        android:text="@string/recipe_ingredients"
        android:textSize="@dimen/recipe_detail_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientRecyclerView"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/padding"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients"/>

    <TextView
        android:id="@+id/directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="@dimen/padding_standard"
        android:text="@string/recipe_directions"
        android:textSize="@dimen/recipe_detail_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientRecyclerView"
        />

    <TextView
        android:id="@+id/recipe_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/recipe_directions"
        android:textSize="@dimen/recipe_detail_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directions"
        />



    <TextView
        android:id="@+id/equipments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="@dimen/padding_standard"
        android:text="@string/equipments"
        android:textSize="@dimen/recipe_detail_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_directions"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/equipmentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/padding"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equipments"/>

    <TextView
        android:id="@+id/similar_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="@dimen/padding_standard"
        android:text="@string/similar_recipes"
        android:textSize="@dimen/recipe_detail_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equipmentsRecyclerView"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/similarRecipesRecyclerView"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/padding"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/similar_recipes"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>