<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.recipeDetail.RecipeDetailFragment">
<ScrollView
    android:id="@+id/details_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"

    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_standard"
      >

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:transitionName="recipeName"
            android:textStyle="bold"
            android:padding="@dimen/padding_standard"
            android:text="@string/recipe_title"
            android:textSize="@dimen/recipe_detail_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:transitionName="recipeName"
            android:padding="@dimen/padding_standard"
            android:text="@string/recipe_servings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_title"
            />

        <ImageView
            android:id="@+id/add_to_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/favorites_background"
            android:src="@drawable/ic_favorite"
            android:onClick="addToFavorites"
            android:layout_marginEnd="@dimen/margin_standard"
            app:layout_constraintBottom_toTopOf="@id/linearLayoutContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <LinearLayout
            android:layout_margin = "@dimen/margin_half"
            android:id="@+id/linearLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_half"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/servings">

            <androidx.cardview.widget.CardView

                xmlns:card_view="http://schemas.android.com/tools"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_half"
                android:padding="@dimen/margin_half"
                android:layout_weight="2.5"
                app:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/card_elevation">
                <ImageView
                    android:id="@+id/recipe_image_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description_recipe_image"
                    android:transitionName="recipeImage"
                    app:srcCompat="@drawable/food_image" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/time_container"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_standard"
                android:gravity="center"
                android:layout_margin="@dimen/padding_standard"
                android:background="@drawable/recipe_details">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_readiness_time"/>
                <TextView
                    android:id="@+id/ready_in_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="14"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/recipe_detail_text_size"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mins"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/recipe_detail_text_size"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/health_score_container"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:gravity="center"

                android:paddingTop="@dimen/padding_standard"
                android:layout_margin="@dimen/padding_standard"
                android:background="@drawable/recipe_details">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_readiness_time"/>
                <TextView
                    android:id="@+id/health_score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="14"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/recipe_detail_text_size"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/health_score"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health_score"
                    android:textSize="@dimen/recipe_detail_text_size"
                    />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/nutrition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nutrition"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginEnd="@dimen/padding_standard"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutContainer"
            app:layout_constraintBottom_toTopOf="@+id/ingredients"/>

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_half"
            android:padding="@dimen/padding_standard"
            android:text="@string/recipe_ingredients"
            android:textSize="@dimen/recipe_detail_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutContainer"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientRecyclerView"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/padding"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients"/>

        <TextView
            android:id="@+id/directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="@dimen/padding_standard"
            android:text="@string/recipe_directions"
            android:textSize="@dimen/recipe_detail_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientRecyclerView"
            />

        <TextView
            android:id="@+id/recipe_directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/recipe_directions"
            android:textSize="@dimen/recipe_detail_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/directions"
            />

        <TextView
            android:id="@+id/equipments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="@dimen/padding_standard"
            android:text="@string/equipments"
            android:textSize="@dimen/recipe_detail_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_directions"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/equipmentsRecyclerView"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/padding"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipments"/>

        <TextView
            android:id="@+id/similar_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="@dimen/padding_standard"
            android:text="@string/similar_recipes"
            android:textSize="@dimen/recipe_detail_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipmentsRecyclerView"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similarRecipesRecyclerView"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/padding"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/similar_recipes"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

        <ImageView
            android:src="@drawable/loading_animation"
            android:id="@+id/recipe_loading_anim"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>